more visibility fixes, removed flower pictures
fixed tooltip breaking on lower side
removed 'amcharts'
moved hover functionality to entire tile

--- a/public/searchRes.css
+++ b/public/searchRes.css
@@ -27,4 +27,8 @@ hgroup h2.lead {  color: #2a3644; margin: 0; padding-bottom: 10px; }
 .react-grid-item.cssTransforms {z-index: 0;}
 .react-grid-item.cssTransforms:hover {z-index: 1 !important;}
 .__react_component_tooltip.place-top.type-dark {z-index:3; position:absolute; overflow:visible; width: 400px;}
+.__react_component_tooltip.place-bottom.type-dark {z-index:3; position:absolute; overflow:visible; width: 400px;}
 .ReactModal__Overlay {z-index: 4} 
+
+
+div.amcharts-chart-div a {visibility: hidden; }
